# thetagang

./: .gitignore  README.md  pyproject.toml  thetagang.schwab.toml
thetagang/: portfolio_manager.py  thetagang.py
thetagang/brokers/: base.py  broker_init_py.py  ibkr.py  schwab.py
thetagang/tools/: schwab_setup.py
