[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Brenden Matthews", email = "github@brenden.brndn.io"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1.7,<9",
  "ib-insync>=1.0.3,<2",
  "toml>=0.10.2,<0.11",
  "ib-async>=2.0.1,<3",
  "pydantic>=2.10.2,<3",
  "annotated-types>=0.7.0,<0.8",
  "polyfactory>=2.18.1,<3",
  "exchange-calendars>=4.8",
  "schwab-trader>=0.1.0",  # NEW: Added for Schwab support
  "httpx>=0.27.0",  # NEW: Required by schwab-trader for async HTTP
]
description = "ThetaGang is an IBKR bot for getting money"
license = "AGPL-3.0-only"
name = "thetagang"
readme = "README.md"
requires-python = ">=3.10,<3.14"
version = "1.16.1"

[project.urls]
"Bug Tracker" = "https://github.com/brndnmtthws/thetagang/issues"
Documentation = "https://github.com/brndnmtthws/thetagang/blob/master/README.md"
GitHub = "https://github.com/brndnmtthws/thetagang"
Homepage = "https://github.com/brndnmtthws/thetagang"
Repository = "https://github.com/brndnmtthws/thetagang.git"

[project.scripts]
thetagang = "thetagang.entry:cli"

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=8.0.0,<9",
  "pytest-mock>=3.14.0,<4",
  "pytest-asyncio>=0.23.0,<1.2",
  "pytest-watch>=4.2.0,<5",
  "ruff>=0.9.1,<0.13.0",
  "pyright>=1.1.403",
]

[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py310"
exclude = ["stubs"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
